# packages/api/src/layer/types/layerTypes.ts
@@ -1,0 +1,9 @@
+import type { LayerSummary } from '@db';
+
+export interface GetLayerByNameParam {
+  layerName: string;
+}
+
+export interface GetLayersResponse {
+  layers: LayerSummary[];
+}
