# packages/db/src/types/property.ts
@@ -1,0 +1,3 @@
+import type { components } from '../openapi';
+
+export type Property = components['schemas']['Property'];
